--- a/package.xml
+++ b/package.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>lanelet2_extension</name>
-  <version>0.1.0</version>
-  <description>The lanelet2_extension package contains libraries to handle Lanelet2 format data.</description>
+  <version>1.12.0</version>
+  <description>The lanelet2_extension pacakge contains libraries to handle Lanelet2 format data.</description>
+
   <maintainer email="ryohsuke.mitsudome@tier4.jp">mitsudome-r</maintainer>
-  <license>Apache License 2.0</license>
 
-  <buildtool_depend>ament_cmake_auto</buildtool_depend>
+  <license>Apach 2</license>
 
-  <build_depend>autoware_cmake</build_depend>
+  <buildtool_depend condition="$ROS_VERSION != 2" >catkin</buildtool_depend>
+  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
+  
+  <build_depend condition="$ROS_VERSION == 2">ament_cmake_auto</build_depend>
+  
+  <build_depend>carma_cmake_common</build_depend>
 
-  <depend>autoware_auto_mapping_msgs</depend>
-  <depend>autoware_auto_planning_msgs</depend>
-  <depend>autoware_planning_msgs</depend>
-  <depend>autoware_utils</depend>
+
+  <depend condition="$ROS_VERSION == 1" >roscpp</depend>
+  <depend condition="$ROS_VERSION == 2" >rclcpp</depend>
+  <depend>libproj-dev</depend>
   <depend>geographiclib</depend>
-  <depend>geometry_msgs</depend>
   <depend>lanelet2_core</depend>
   <depend>lanelet2_io</depend>
   <depend>lanelet2_maps</depend>
@@ -25,15 +28,14 @@
   <depend>lanelet2_traffic_rules</depend>
   <depend>lanelet2_validation</depend>
   <depend>pugixml-dev</depend>
-  <depend>range-v3</depend>
-  <depend>rclcpp</depend>
-  <depend>tf2</depend>
-  <depend>tf2_geometry_msgs</depend>
-  <depend>visualization_msgs</depend>
+  <depend>hardcoded_params</depend>
 
-  <test_depend>ament_cmake_ros</test_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>launch</exec_depend>
+  <exec_depend>launch_ros</exec_depend>
+  <exec_depend>carma_ros2_utils</exec_depend>
 
   <export>
-    <build_type>ament_cmake</build_type>
+    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
   </export>
 </package>
